Classroom Management System Changelog

9/11/17
----------
- Created project using template(s) from startbootstrap.com
- Customized template(s) by removing content and adding new content
- Created MySQL database ("classroom_mgmt")
- Created MySQL database tables ("teachers" and "students")
- Added MySQL database connectivity (and tested with fake student data)
- Added "Add New Student" page and began creating form to add new student
    - Still requires logic to map a student to a specific teacher

9/16/17
----------
- Moved the navigation sidebar to its own "sidebar.php" file
- Added a new "incidents_x_student" table to the "classroom_mgmt" database
- Added a new "roster.php" page

10/3/17
----------
- Created "classroom_mgmt" repository on Github and pushed code to it.
- Updated "# Students" box on "index.php" to display actual number of students in class

10/5/17
----------
- Loaded "classroom_mgmt" repository into C9.io web-based IDE

11/4/17
----------
- Added a PHP include so that the site's title element could be updated in one spot
- Updated "roster.php" to include links to student profiles (using an "id" parameter in the URL)
- Updated "profile.php" so that student information is dynamically displayed on the page, based on the
  "student_id" number included in the "id" parameter of the "roster.php" page. (Done using $_GET variable)
- Removed pages from the "pages" folder and put them into the root directory, refactoring file dependencies as needed