@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    
+
     <!-- Page Title -->
     <?php include './pages/includes/title.php'; ?>
 
@@ -35,6 +35,22 @@
 
 <body>
 
+  <!-- Top nav bar -->
+  <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+      <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.php">Classroom Management System</a>
+      </div>
+      <!-- /.navbar-header -->
+
+  </nav>
+  <!-- End Top nav bar -->
+
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
@@ -43,7 +59,7 @@
                         <h3 class="panel-title">Please Sign In</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form">
+                        <form role="form" method="POST" action="./process.php">
                             <fieldset>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
@@ -56,12 +72,12 @@
                                         <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                     </label>
                                 </div>
-                                <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
-                            </fieldset>
+                                <input type="submit" value="Login" name="submit" class="btn btn-lg btn-success btn-block">
+                              </fieldset>
                         </form>
                     </div>
                 </div>
+                <a href="./index.php">Back to Home</a>
             </div>
         </div>
     </div>
